# moonotel

./: .gitignore  CONFIGURATION.md  EXECUTION_GUIDE.md  LICENSE  PLAN.md  README_AUTOMATION.md  SETUP_STATUS.md  TASK_STATUS.md  cabal.project  check_and_run.py  check_moon.py  check_test.py  direct_execute.py  do_everything.py  execute_complete.sh  execute_guard.py  execute_moon_test.py  execute_test.py  final_run.sh  final_task_execute.py  final_test.py  full_automation.py  go.sh  main_execute.py  moon.mod.json  otel.cabal  run_automation.sh  run_moon.sh  run_moon_test.py  run_step3.py  run_task.py  run_task_final.py  run_vibe_coding.sh  simple.py  simple_run.sh  status.txt  task_execute.py
_build/: packages.json
api/: additional_comprehensive_tests.mbt  additional_coverage_test.mbt  additional_coverage_tests.mbt  additional_hex_edge_cases.mbt  additional_scenarios_test.mbt  additional_tests.mbt  additional_tracer_tests.mbt  additional_validation_tests.mbt  advanced_boundary_tests.mbt  advanced_coverage_tests.mbt  advanced_edge_error_handling_test.mbt  advanced_integration_test.mbt  advanced_pattern_test.mbt  advanced_scenarios_test.mbt  advanced_trace_propagation_test.mbt  boundary_test.mbt  byte_patterns_test.mbt  comprehensive_boundary_tests.mbt  comprehensive_test.mbt  comprehensive_validation_suite.mbt  context_propagation_test.mbt  corner_cases_test.mbt  distributed_tracing_test.mbt  edge_case_validation_test.mbt  enhanced_context_test.mbt  enhanced_edge_cases_test.mbt  exhaustive_coverage_test.mbt  extended_scenarios_test.mbt  extended_validation_test.mbt  (+32 more)
(+44 files in other folders)
