cabal-version:      2.4
name:               otel
version:            0.1.0
description:        MoonBit OpenTelemetry tracing SDK
synopsis:           A MoonBit OpenTelemetry tracing SDK
category:           Development
author:             OpenTelemetry Developer
maintainer:         developer@example.com
license:            Apache-2.0
license-file:       LICENSE

test-suite otel-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:    base >= 4.7 && < 5
  default-language: Haskell2010
  ghc-options:      -O0 -rtsopts

source-repository head
  type:     git
  location: https://github.com/yourname/otel